# house_price_prediction

./: .gitignore  Dockerfile  Makefile  Practice_9_.ipynb  README.md  data.dvc  docker-compose.yml  dvc.yaml  environment.yml  notebook.ipynb  params.yaml  population_preprocess.ipynb  pyproject.toml  requirements.txt  test.py
.dvc/: config
additional_data/: salary_region.csv
app/: .gitignore  data_transformers.py  main.py  model.dvc  models.py  predict.py
data/: .gitignore  avito_data.dvc
dvclive_msk/: metrics.json  params.yaml
dvclive_msk/plots/metrics/: MAE_RUB.tsv  MAPE.tsv  R2.tsv  RMSE.tsv
dvclive_ru/: metrics.json  params.yaml
dvclive_ru/plots/metrics/: MAE_RUB.tsv  MAPE.tsv  R2.tsv  RMSE.tsv
frontend/src/pages/predict/: index.jsx
frontend/src/pages/predict/components/: CommonForm.jsx  MskForm.jsx  RuForm.jsx
models/: msk.dvc  ru.dvc
src/: evaluate.py  prepare_func.py  prepare_msk.py  prepare_ru.py  train.py
