[tool.poetry]
name = "housing_prices_service"
version = "0.1.0"
description = "housing_prices_service"
authors = ["Dmitrii Martynov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
uvicorn = "0.29.0"
python-dotenv = "1.0.1"
pytz = "2024.1"
psycopg2-binary = "2.9.9"
pika = "1.3.2"
pydantic = "2.6.4"
requests = "2.31.0"
asyncpg = "^0.29.0"
sse-starlette = "^2.1.0"
dvclive = "^3.47.0"
dvc = {extras = ["gdrive"], version = "^3.51.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
api_dev = "python -m src.api"
api_prod = "uvicorn src.api:app --host 0.0.0.0 --port 8002"
bot = "python -m src.telegram.bot"
frontend = "npm run dev --prefix ./frontend"
celery = "celery -A src.celery_worker.tasks.celery_worker worker --loglevel=INFO"
start = ["api_dev", "bot", "celery"]
test = "python -m pytest tests/"
up = "docker-compose up --build --force-recreate --no-deps"
